feature: Playground API (#118)
* feature: Playground API

* Add tests
